Fixed stling issue with reuion pins, working on mobile optimization

--- a/src/Components/MapComponents/Map.scss
+++ b/src/Components/MapComponents/Map.scss
@@ -108,7 +108,6 @@
   height: 0;
   .city-pin {
     svg {
-      width: 80%;
       opacity: 1;
       transition: 1s;
     }
